	** `ssl_verify`
	** `allow_redirects`
	** `requests_timeout`
	* removed `force_parse` kwarg from `MetadataParser.parser`
	* added 'metadata_parser.RedirectDetected' class. if allow_redirects is False, a detected redirect will raise this.
	* added 'metadata_parser.NotParsableRedirect' class. if allow_redirects is False, a detected redirect will raise this if missing a Location.


0.9.5
	* failing to load a document into BeautifulSoup will now catch the BS error and raise NotParsable
	
0.9.4
	* created `MetadataParser.get_url_canonical`
	* created `MetadataParser.get_url_opengraph`
	* `MetadataParser.get_discrete_url` now calls `get_url_canonical` and `get_url_opengraph`

0.9.3
	* fixed packaging error. removed debug "print" statements

0.9.2
	* upgrade nested local canonical rels correctly

0.9.1
	* added a new `_internal` storage namespace to the `MetadataParser.metadata` payload.
	  this simply stashes the `MetadataParser.url` and `MetadataParser.url_actual` attributes to makes objects easier to encode for debugging
	* the twitter parsing was incorrectly looking for 'value' not 'content' as in the current spec
	* tracking the shortlink on a page

0.9.0
	- This has a default behavior change regarding `get_discrete_url()` .
	- `is_parsed_valid_url()` did not correctly handle `require_public_netloc=True`, and would allow for `localhost` values to pass
	- new kwarg `allow_localhosts` added to 
		* is_parsed_valid_url
		* is_url_valid
		* url_to_absolute_url
		* MetadataParser.__init__
		* MetadataParser.absolute_url
		* MetadataParser.get_discrete_url
		* MetadataParser.get_metadata_link
	- new method `get_fallback_url`
	- `url_to_absolute_url` will return `None` if not supplied with a fallback and test url. Previously an error in parsing would occur
	- `url_to_absolute_url` tries to do a better job at determining the intended url when given a malformed url.

0.8.3
	- packaging fixes

0.8.2