@@ -6,8 +6,14 @@
 	* removed `force_parse` kwarg from `MetadataParser.parser`
 	* added 'metadata_parser.RedirectDetected' class. if allow_redirects is False, a detected redirect will raise this.
 	* added 'metadata_parser.NotParsableRedirect' class. if allow_redirects is False, a detected redirect will raise this if missing a Location.
-
-
+	* added `requests_session` argument to `MetadataParser`
+	* starting to use httpbin for some tests
+	* detecting JSON documents 
+	* extended NotParseable exceptions with the metadata_parser instance
+	* added `only_parse_http_ok` which defaults to True (legacy).  submitting False will allow non-http200 responses to be parsed.
+	* shuffled `fetch_url` logic around. it will now process more data before a potential error.
+	* working on support for custom request sessions that can better handle redirects (requires patch or future version of requests)
+	
 0.9.5
 	* failing to load a document into BeautifulSoup will now catch the BS error and raise NotParsable
 	
